src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__trim_leading_whitespace.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(sqlname = \"ltrim\")]\nfn trim_leading_whitespace<'a>(a: &'a str) -> &'a str {\n    a.trim_start_matches(' ')\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct TrimLeadingWhitespace;
impl crate::func::EagerUnaryFunc for TrimLeadingWhitespace {
    type Input<'a> = &'a str;
    type Output<'a> = &'a str;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        trim_leading_whitespace(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for TrimLeadingWhitespace {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("ltrim")
    }
}
fn trim_leading_whitespace<'a>(a: &'a str) -> &'a str {
    a.trim_start_matches(' ')
}
